j--/tests/pass/PostInc.java
package pass;


public class PostInc {
	public int inc(int a) {
		return a++;
	}

}
