j--/tests/fail/PostInc.java
package fail;


public class PreDec {
	public static main(String args[]) {
		System.out.println("coucou"++);
	}

}
